# H-Computer-Science-II-Programs

./: .devcontainer.json  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  uncrustify.cfg
fraction/: CMakeLists.txt  Fraction.cpp  Fraction.h  Source.cpp
polynomial/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  Source.cpp
src/: CMakeLists.txt
